Updation of the Project

--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
                   <div class="carousel-item active">
                     <img src="assets/img/slides-1.jpg" height="550px" width="90px" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                      <h5>Team Yogesh Vajpayee</h5>
+                      <p>Elevated team through mentorship, fostering growth and collaboration.</p>
                       
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="assets/img/slides-2.jpg" height="550px" width="90px" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                      <h5>Team Yogesh Vajpayee</h5>
+                      <p>Elevated team through mentorship, fostering growth and collaboration.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="assets/img/slides-3.jpg" height="540px" width="90px" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <h5>Team Yogesh Vajpayee</h5>
+                      <p>Elevated team through mentorship, fostering growth and collaboration.</p>
                     </div>
                   </div>
                 </div>
@@ -289,27 +289,26 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section-bg">
       <div class="container">
-
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h1>Yogesh Vajpayee</h1>
+          <h2>Objective</h2>
+          <p>Seeking a growth-focused company that values continuous improvement and provides opportunities to enhance my knowledge and expertise, where I can contribute my expertise and dedication for mutual success.</p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-              </p>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">Sumary</h3>
+        <div class="resume-item pb-0">
+          <h4>Yogesh Vajpayee</h4>
+          <p><em>Tech-savvy, skilled with basics in C++, Java, and Python. Additional expertise includes HTML5, XML, Java Script, VB Script, and CSS3, with basic knowledge of   OS like Linux and Windows. Proficient in Microsoft Office and Internet tools. Adaptable and quick learner, embracing new technologies, including AI tools for mutual growth. Currently, serving as a Dynamic Team Leader driving team efficiency, innovation, and successful remote transition.</em></p>
+          <p>
+          <ul>
+            <li>Raichur, KA, IN</li>
+            <li>+91 8050489689</li>
+            <li>yogeshvajpayee111@gmail.com</li>
+          </ul>
+          </p>
             </div>
-
+            <!--
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
@@ -317,28 +316,31 @@
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
+            -->
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Bachelor of Computer Applications. (BCA)</h4>
+              <h5>2016 - 2020</h5>
+              <p><em>SNMV College of Arts &amp; Science, Coimbatore, TN</em></p>
+              <p>I'm grateful for my BCA journey at SNMV College of Arts & Science, affiliated with Bharathiar University. The rigorous curriculum and supportive faculty equipped me with a robust foundation in computer applications, paving the way for success in the tech industry.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4><strong> Team Leader</strong></h4>
               <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Focus Edumatics, CBE, TN </em></p><br>
               <p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Demonstrated exceptional leadership abilities by successfully leading a Team of 25 - 30 members, ensuring efficient project execution and timely delivery.</li>
+                <li>Collaborated with cross-functional teams to streamline processes and achieve project goals, fostering effective communication and cooperation.</li>
+                <li>Implemented innovative strategies and best practices to enhance Team productivity, resulting in improved performance and customer satisfaction.</li>
+                <li>Provided mentorship, guidance, and support to Team members, fostering a positive work environment that promoted individual growth and teamwork.</li>
+                <li>Leading the Team through a successful transition to remote work, maintaining high levels of productivity and Team morale through effective communication and virtual collaboration tools.</li>
               </ul>
               </p>
             </div>
+            <!--
             <div class="resume-item">
               <h4>Graphic design specialist</h4>
               <h5>2017 - 2018</h5>
@@ -352,6 +354,7 @@
               </ul>
               </p>
             </div>
+            -->
           </div>
         </div>
 
@@ -407,6 +410,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
+    
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
@@ -557,15 +561,15 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
-
+    </section>  
+    <!-- End Portfolio Section -->
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <section id="portfolio" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Testimonials For Team</h2>
-          <p>Edit it</p>
+          <p>Step into the inspiring world of our online tutoring community, where collaboration and dedication converge. Our diverse team of educators creates a learning environment that transcends boundaries, supporting students every step of the way. Join us, where individual growth, open communication, and exceptional teamwork redefine what it means to be part of something truly remarkable.</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -575,7 +579,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I am honored to be a part of an incredible online tutoring Team. The collaboration and dedication of our Team members are truly remarkable. Together, we create an environment that fosters learning and supports our students every step of the way. I'm proud to work with such a talented and passionate group of educators.
+                  Part of an incredible online tutoring team, fostering a learning environment and supporting students every step of the way.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -588,7 +592,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I like my team everyone comes from a different part of the country. All have a different kind of mindset and skills. I have learned a lot from my team. But some people are still a little bit reserved. I hope they are also will come forward and speak out in front of everyone.
+                  Enriching experience learning from a diverse team; looking forward to all members, even the reserved ones, sharing their voices.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -602,7 +606,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  After a year of employment with Focus Edumatics, I have spent the last three months working with this Team. Collaborating with this Team has not only been professionally rewarding but also enjoyable. Kudos to the Team for their exceptional teamwork and strong work ethic. They consistently met deadlines with a smile, and their open communication made the entire process seamless. I'm grateful for the positive, and together, we achieved fantastic results that exceeded our expectations.
+                  Incredible three months with this team, marked by exceptional teamwork, strong work ethic, and open communication leading to fantastic results.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -616,7 +620,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I am working with a great colleagues who share their experiences and work together in a spirit of mutual benefit. I am very glad to be a part of this wonderful team.
+                  Glad to work with great colleagues, sharing experiences and collaborating for mutual benefit in this wonderful team.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -629,7 +633,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I've been with Focus Edumatics for two years, and I've been a part of this team for the last three months. I've found it to be an amazing team. We work together like a family, supporting each other with sessions and knowledge. It's a great team to be a part of! The positive atmosphere and collaborative spirit make every day enjoyable and productive.
+                  Enjoying each day in this amazing team with a positive atmosphere and collaborative spirit, working together like a family.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
@@ -642,10 +646,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I'm working as an Online Tutor at Focus Edumatics Pvt Ltd for three years. The success of my students and my love for teaching motivate me every day. One of my most incredible experiences was receiving appreciation from students.
-
-                  Special thanks to this organization and my Team leads who guided me. The teaching profession is a lifelong learning process based on motivation and experience, allowing me to grow as an educator. 
-
+                  As an online tutor for three years, the success of my students and my love for teaching drive me daily, thanks to this organization and my team leads for their guidance.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
@@ -667,7 +668,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Open to dynamic opportunities with a growth-focused company that values continuous improvement. Tech-savvy and adaptable professional with expertise in C++, Java, Python, and more. Proficient in Microsoft Office, internet tools, and leading teams to success. Let's connect to explore mutual growth and success!</p>
         </div>
 
         <div class="row">
@@ -675,16 +676,14 @@
           <div class="col-lg-4 col-md-7">
             <div class="contact-about">
               <h3>Yogesh Vajpayee</h3>
-              <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+              <p>As a tech-savvy and dynamic Team Leader, I drive efficiency, innovation, and successful remote transitions. Eager to contribute my skills and dedication to a growth-focused company that values continuous improvement. Let's create a remarkable learning environment together!</p>
               <div class="social-links"><br><br>
+                <a href="https://github.com/Yogesh-Vajpayee/" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://web.skype.com//" target="_blank" class="skype"><i class="bi bi-skype"></i></a>
                 <a href="https://twitter.com/home" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.linkedin.com/feed/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <a href="https://web.skype.com//" target="_blank" class="skype"><i class="bi bi-skype"></i></a>
-                <a href="https://web.whatsapp.com/" target="_blank" class="telegram"><i class="bi bi-telegram"></i></a>
-                <a href="https://web.whatsapp.com/" target="_blank" class="snapchat"><i class="bi bi-snapchat"></i></a>
-                <a href="https://web.whatsapp.com/" target="_blank" class="github"><i class="bi bi-github"></i></a>
               </div>
             </div>
           </div>
@@ -693,12 +692,12 @@
             <div class="info">
 
               <div class="d-flex align-items-center">
-                <a href="#" target="_blank"class="twitter"><i class="bi bi-geo-alt"></i></a>
+                <a href="" target="_blank"class="twitter"><i class="bi bi-geo-alt"></i></a>
                 <p>W18 MNR Raichur<br>Karnataka, IN 584101</p>
               </div>
 
               <div class="d-flex align-items-center mt-4">
-                <a href="#" target="_blank" class="google"><i class="bi bi-google"></i></a>
+                <a href="https://mail.google.com/mail/" target="_blank" class="google"><i class="bi bi-google"></i></a>
                 <p>yogeshvajpayee@gmail.com</p>
               </div>
 
